# haxball-league-dashboard

./: .gitignore  Dockerfile  Home.py  README.md  login.yaml  pyproject.toml  requirements.txt  schema.prisma
.streamlit/: secrets.toml.example
pages/: 1_Teams.py  2_Matches.py  3_Add_results.py  3_Match_details.py  4_Add_results.py  4_Statistics.py  5_Add_results.py  5_Edit_match_details.py  5_Edit_player_details.py  6_Edit_player_details.py
pages_experimental/: 1_Teams.py  2_Matches.py  3_Match_details.py  4_Statistics.py  5_Edit_match_details.py  5_Standings.py  6_Database_operations.py  7_Edit_match_details.py  8_Edit_player_details.py
utils/: constants.py  data.py  settings.py  utils.py
