[tool.poetry]
name = "haxball-league-dashboard"
version = "0.1.0"
description = ""
authors = ["Wazarr <jeje_04@live.com>"]
readme = "README.md"
packages = [{include = "haxball_league_dashboard"}]

[tool.poetry.dependencies]
python = "^3.9, !=3.9.7"
streamlit = "^1.13.0"
prisma = "^0.7.0"
pandas = "^1.5.0"
numpy = "^1.23.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
